hard-gists/5bfad28ceb3a484dfd2a/run.log
=== Docker Run Log for 5bfad28ceb3a484dfd2a ===
Started at: Mi 29. Okt 16:14:05 CET 2025

[2025-10-29 16:14:06] START: Running container for 5bfad28ceb3a484dfd2a
[2025-10-29 16:14:06] SUCCESS: Container ea9eb6e68d78bc1b453e75e082fd548e63bd4166fa9b85d774f03cea71cff0df started for 5bfad28ceb3a484dfd2a
=== Container logs for 5bfad28ceb3a484dfd2a ===
  File "/snippet.py", line 116
    print fn.__name__, fn(u, v)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5bfad28ceb3a484dfd2a ===
[2025-10-29 16:14:08] INFO: Container ea9eb6e68d78bc1b453e75e082fd548e63bd4166fa9b85d774f03cea71cff0df has stopped
